--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./apps/medicine-api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.425.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
