--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -73,7 +75,10 @@
     ],
     "moduleNameMapper": {
       "^@app/aws(|/.*)$": "<rootDir>/libs/aws/src/$1",
-      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
+      "^@app/client-lib(|/.*)$": "<rootDir>/libs/client-lib/src/$1",
+      "^@app/doctor-lib(|/.*)$": "<rootDir>/libs/doctor-lib/src/$1",
+      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1"
     }
   }
 }
