--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=AKIARGZ5XCI5N63UTC46
 AWS_SECRET_ACCESS_KEY=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
 AWS_SES_SERVICE_EMAIL=sichinavailia@gmail.com
+REDIS_HOST=redis
+REDIS_PORT=6379
