Fully implemented signing up

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -3,3 +3,4 @@ POSTGRES_PASSWORD=iliamagaria
 POSTGRES_DATABASE=clients
 POSTGRES_PORT=5432
 POSTGRES_HOST=postgres_clients
+HOSTNAME=http://localhost:3001
