--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
       "^@app/doctor-lib(|/.*)$": "<rootDir>/libs/doctor-lib/src/$1",
       "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
       "^@app/redis(|/.*)$": "<rootDir>/libs/redis/src/$1",
-      "^@app/forms-lib(|/.*)$": "<rootDir>/libs/forms-lib/src/$1"
+      "^@app/forms-lib(|/.*)$": "<rootDir>/libs/forms-lib/src/$1",
+      "^@app/facade(|/.*)$": "<rootDir>/libs/facade/src/$1"
     }
   }
 }
