--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,11 +72,11 @@
       "@app/city-lib/*": [
         "libs/city-lib/src/*"
       ],
-      "@app/specialty-lib": [
-        "libs/specialty-lib/src"
+      "@app/specialty": [
+        "libs/specialty/src"
       ],
-      "@app/specialty-lib/*": [
-        "libs/specialty-lib/src/*"
+      "@app/specialty/*": [
+        "libs/specialty/src/*"
       ]
     }
   }
