--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=AKIARGZ5XCI5N63UTC46
 AWS_SECRET_ACCESS_KEY=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
 AWS_SES_SERVICE_EMAIL=sichinavailia@gmail.com
+AWS_KMS_KEY_ID=5ada9e00-eb1d-4c60-b90e-d793ab5f2aff
 
 # Redis
 REDIS_HOST=redis
