--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./apps/medicine-api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.427.0",
     "@aws-sdk/client-ses": "^3.425.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
