--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./apps/medicine-api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.428.0",
     "@aws-sdk/client-kms": "^3.427.0",
     "@aws-sdk/client-ses": "^3.425.0",
     "@aws-sdk/client-sns": "^3.428.0",
@@ -100,7 +101,8 @@
       "^@app/city-lib(|/.*)$": "<rootDir>/libs/city-lib/src/$1",
       "^@app/specialty-lib(|/.*)$": "<rootDir>/libs/specialty-lib/src/$1",
       "^@app/specialty(|/.*)$": "<rootDir>/libs/specialty/src/$1",
-      "^@app/database(|/.*)$": "<rootDir>/libs/database/src/$1"
+      "^@app/database(|/.*)$": "<rootDir>/libs/database/src/$1",
+      "^@app/knn-lib(|/.*)$": "<rootDir>/libs/knn-lib/src/$1"
     }
   }
 }
