Implementing knn microservice

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ AWS_SECRET_ACCESS_KEY=0t72QTixb81qIYIz8Ta2NARRtf55qCMV6cGjv9gm
 AWS_SES_SERVICE_EMAIL=sichinavailia@gmail.com
 AWS_KMS_KEY_ID=5ada9e00-eb1d-4c60-b90e-d793ab5f2aff
 
+AWS_MEDICINE_ARN_NEW_DOCTOR=arn:aws:sns:us-east-1:083344429626:medicine_api-new_doctor_vertice.fifo
+
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
