--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "ioredis": "^5.3.2",
     "joi": "^17.11.0",
+    "nats": "^2.17.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -104,7 +105,8 @@
       "^@app/database(|/.*)$": "<rootDir>/libs/database/src/$1",
       "^@app/knn-lib(|/.*)$": "<rootDir>/libs/knn-lib/src/$1",
       "^@app/doctor-vertices(|/.*)$": "<rootDir>/libs/doctor-vertices/src/$1",
-      "^@app/suggestions-vertices(|/.*)$": "<rootDir>/libs/suggestions-vertices/src/$1"
+      "^@app/suggestions-vertices(|/.*)$": "<rootDir>/libs/suggestions-vertices/src/$1",
+      "^@app/nats(|/.*)$": "<rootDir>/libs/nats/src/$1"
     }
   }
 }
