--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,19 @@
+# AWS
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_SES_SERVICE_EMAIL=
+AWS_KMS_KEY_ID=
+
+AWS_MEDICINE_ARN_NEW_DOCTOR=
+
+# Redis
+REDIS_HOST=
+REDIS_PORT=
+
+# Jwt
+JWT_SECRET=
+JWT_EXPIRES_IN=
+
+# Nats
+NATS_HOST=
